--- a/CaliOrBust/package.json
+++ b/CaliOrBust/package.json
@@ -19,6 +19,7 @@
     "expo-asset": "~8.0.0",
     "expo-camera": "^8.0.0",
     "expo-constants": "~8.0.0",
+    "expo-document-picker": "^8.0.0",
     "expo-font": "~8.0.0",
     "expo-permissions": "^8.0.0",
     "expo-web-browser": "~8.0.0",
